@startuml

' Defining Classes
entity User {}
entity Instructor {}
entity Client {}
entity Child {}
entity admin {}
entity Location {}
entity Lesson{}
entity PrivateLesson {}
entity PublicLesson {}
entity Offering {}
entity City {}
entity Booking {}
entity TimeSlot {}
entity Schedule {}

' Defining Catalogues
entity ScheduleCatalogue {}
entity UserCatalogue {}
entity LessonCatalogue {}
entity OfferingCatalogue {}
entity BookingCatalogue {}
entity LocationCatalogue {}
entity CityCatalogue {}

' Aggregations
User *-- UserCatalogue
Schedule *-- ScheduleCatalogue
Lesson *-- LessonCatalogue
Offering *-- OfferingCatalogue
Booking *-- BookingCatalogue
Location *-- LocationCatalogue
City *-- CityCatalogue

' Associations of Admin with the Catalogues
admin -- UserCatalogue : Read-Delete >
admin -- LessonCatalogue : Create-Read-Delete >
admin -- OfferingCatalogue : View >
admin -- BookingCatalogue : View >
admin -- LocationCatalogue : View >
admin -- CityCatalogue : View >
admin -- ScheduleCatalogue : View >

' Inheritance
Client <|-- User
Instructor <|-- User
PrivateLesson <|-- Lesson
PublicLesson <|-- Lesson

' Multiplicities
Client "1" -- "0. .*" Child : has >
Schedule "1" -- "1. .*" TimeSlot : Made-Of >
Location "*" -- "1" City : >
Location "1" -- "*" Schedule : have <
Location "1" -- "*" Lesson: have <
Instructor "1" -- "*" City: have >

' Association Class
(Client, Offering) .. Booking
(Lesson, Instructor) .. Offering

@enduml